--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
      <a class="link" href="download/play?&nome=brocasito&apikey=SUAKEY">Play</a>
     </div>
     <div id="links">
-     <a class="link" href="download/playv?&nome=akame edit funk&apikey=SUAKEY">Play vídeo</a>
+     <a class="link" href="download/playv?&nome=MC Kevin - Quando a gente briga&apikey=SUAKEY">Play vídeo</a>
     </div>    
     <div id="links">
      <a class="link" href="download/ytmp3?&link=https://youtu.be/VHrmaxHJOKw&apikey=SUAKEY">Ytmp3</a>
