--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
         <a class="link" href="nsfw/hentai?apikey=SUAKEY">Hentai</a>
     </div>
     <div id="links">
-     <a class="link" href="download/play?&nome=brocasito&apikey=SUAKEY">Play</a>
+     <a class="link" href="download/play?&nome=MC Kevin&apikey=SUAKEY">Play</a>
     </div>
     <div id="links">
      <a class="link" href="download/playv?&nome=MC Kevin - Quando a gente briga&apikey=SUAKEY">Play vídeo</a>
