--- a/public/index.html
+++ b/public/index.html
@@ -39,10 +39,10 @@
      <a class="link" href="download/playv?&nome=MC Kevin - Quando a gente briga&apikey=SUAKEY">Play vídeo</a>
     </div>    
     <div id="links">
-     <a class="link" href="download/ytmp3?&link=https://youtu.be/VHrmaxHJOKw&apikey=SUAKEY">Ytmp3</a>
+     <a class="link" href="download/ytmp3?&link=https://youtu.be/oy8BZaRFc7Y&apikey=SUAKEY">Ytmp3</a>
     </div>
     <div id="links">
-     <a class="link" href="download/ytmp4?&link=https://youtu.be/NSsn28a0u1U&apikey=SUAKEY">Ytmp4</a>
+     <a class="link" href="download/ytmp4?&link=https://youtu.be/7FSwRYMKq7Q&apikey=SUAKEY">Ytmp4</a>
     </div>        
     <!-- Javascript -->
     <script src="/script/jquery.min.js"></script>
